@@ -20,3 +20,4 @@ Contributors:
 * Eloy Félix <eloyfelix>
 * René Hafner (Hamburger) <renehamburger1993>
 * Lily Wang <lilyminium>
+* Josh Vermaas <jvermaas>
